--- a/local/templates/exam1/css/style.css
+++ b/local/templates/exam1/css/style.css
@@ -2774,3 +2774,14 @@ hr + .catalog-box {
   color: #00ff43;
 }
 
+.nav .menu .color-yellow{
+  color: #fde910;
+}
+
+.side-block .red {
+  background: linear-gradient(#fda3a3, #ff0000);
+}
+
+.side-block .green {
+  background: linear-gradient(#e2ffe7, #00ff43);
+}
